# simdjson

./: .appveyor.yml  .cirrus.yml  .clangd  .dockerignore  .drone.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .travis.yml  2  AI_USAGE_POLICY.md  AUTHORS  BENCHMARK_METHODOLOGY.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  Doxyfile  FINAL_CHANGES_SUMMARY.md  HACKING.md  LICENSE  LICENSE-MIT  LIMITATIONS.md  Makefile  Notes.md  PARSING_BENCHMARK_RESULTS.md  README.md  RELEASES.md  SECURITY.md  SERIALIZATION_BENCHMARK_RESULTS.md  UNIFIED_BENCHMARK_README.md  UNIFIED_BENCHMARK_RESULTS.md  ablation.md  ablation.sh  ablation_guide.md  ablation_results.md  (+633 more)
all/: CMakeLists.txt
benchmark/: CMakeLists.txt  Dockerfile  UNIFIED_BENCHMARK_RESULTS.md  UNIFIED_RESULTS.md  bench_dom_api.cpp  bench_ondemand.cpp  bench_parse_call.cpp  bench_sax.cpp  bench_stream_formats.cpp  benchfeatures.cpp  benchmark.h  benchmark_reflection_usage_compilation.sh  benchmarker.h  build_unified_benchmark.sh  checkperf.cmake  checkperf.sh  distinctuseridcompetition.cpp  event_counter.h  genfeaturejson.rb  genfeaturejsonseed.rb  get_corpus_benchmark.cpp  json_benchmark.h  json_parser.h  kostyacompetition.cpp  minifiercompetition.cpp  parse.cpp  parse_records_benchmark.h  parse_stream.cpp  parseandstatcompetition.cpp  parsingcompetition.cpp  perfdiff.cpp  statisticalmodel.cpp  unified_benchmark.cpp
dependencies/: .gitignore  CMakeLists.txt  import.cmake
examples/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONFERENCE_TALK.md  INSTALL_CPR.md  README_ONELINER.md  SERIALIZATION_README.md  conference_demo.sh  conference_demo_serialization.sh  github_legacy.cpp  github_legacy_benchmark.cpp  github_modern.cpp  github_modern_benchmark.cpp  github_serialization_demo.cpp  reflection_roundtrip_demo.cpp  serialization_benchmark.cpp
fuzz/: CMakeLists.txt  FuzzUtils.h  Fuzzing.md  NullBuffer.h  build_corpus.sh  build_fuzzer_variants.sh  build_like_ossfuzz.sh  fuzz.cpp  fuzz_atpointer.cpp  fuzz_dump.cpp  fuzz_dump_raw_tape.cpp  fuzz_element.cpp  fuzz_implementations.cpp  fuzz_minify.cpp  fuzz_minifyimpl.cpp  fuzz_ndjson.cpp  fuzz_ondemand.cpp  fuzz_padded.cpp  fuzz_parser.cpp  fuzz_print_json.cpp  fuzz_singlestage.cpp  fuzz_utf8.cpp  main.cpp  measure_coverage.sh  minimize_and_cleanse.sh  ossfuzz.sh  quick_check.sh  rvv_fuzz_minify.cpp  rvv_fuzz_parse.cpp  rvv_fuzz_validate_utf8.cpp  supported_implementations.h
include/: CMakeLists.txt  jsonminifier.h  jsonparser.h  simdjson.h  simdjson_internal.h  simdprune_tables.h  stage1_find_marks.h  stage2_flatten.h  stage3_ape_machine.h  stage4_shovel_machine.h  transitions.h
json-anomaly-detector/: CMakeLists.txt
jsonchecker/: CMakeLists.txt  fail01.ndjson  fail34.json  fail35.json  fail36.json  fail37.json  fail38.json  fail39_EXCLUDE.json  fail40_s64boverflow.json  fail42.json  fail43.json  fail44.json  fail45.json  fail46.json  fail47.json  fail48.json  fail49.json  fail51.json  fail52.json  fail54.json  fail56.json  fail57.json  fail58.json  fail59.json  fail60.json  fail61.json  fail62.json  fail63.json  fail65.json  fail66.json  fail67.json  fail68.json  fail69.json  fail71.json  fail72.json  fail73.json  fail74.json  fail76.json  fail77.json  fail78.json  (+21 more)
jsonexamples/: CMakeLists.txt  adversarial.json  amazon_cellphones.ndjson  blah.py  collect-results.py  example_config.json  gen-branch-test-variants.py  kostya.json  tree-pretty.json  twitter-allstrings-flatarray.json  twitter-array-1digit-ascii.json  twitter-array-1digit-empty.json  twitter-array-1digit-orig.json  twitter-array-1digit-unescaped.json  twitter-array-1digit.json  twitter-array-alltypes.json  twitter-array-orig-ascii.json  twitter-array-orig-empty.json  twitter-array-orig-orig.json  twitter-array-orig-unescaped.json  twitter-array-str-ascii.json  twitter-array-str-empty.json  twitter-array-str-orig.json  twitter-array-str-unescaped.json  twitter-array-stringonly-emptystring.json  twitter-array-stringonly-unescaped-ascii.json  twitter-array-stringonly-unescaped.json  twitter-array-stringonly.json  twitter-base-1digit-unescaped-ascii.json  twitter-base-1digit.json  twitter-base-stringonly-emptystring.json  twitter-base-stringonly-unescaped-ascii.json  twitter-base-stringonly-unescaped.json  twitter-base-stringonly.json  twitter-flat-1digit-ascii.json  twitter-flat-1digit-empty.json  twitter-flat-1digit-orig.json  twitter-flat-1digit-unescaped.json  twitter-flat-orig-ascii.json  twitter-flat-orig-empty.json  (+33 more)
log_aggregator/: .gitignore  CMakeLists.txt  logs.ndjson  main.cpp
singleheader/: CMakeLists.txt  README.md  all_features_test.py  amalgamate.py  amalgamate.sh  amalgamate_demo.cpp  amalgamation_demo.cpp  amalgamation_report.html  simdjson.cpp  simdjson.h  simdjson.h.in
src/: CMakeLists.txt  allocator.cpp  arm64.cpp  base.h  document.cpp  document_parser.cpp  document_parser_callbacks.h  error.cpp  fallback.cpp  from_chars.cpp  haswell.cpp  icelake.cpp  implementation.cpp  isadetection.h  jsoncharutils.h  jsoncharutils_tables.h  jsonioutil.cpp  jsonminifier.cpp  jsonparser.cpp  jsonstream.cpp  lasx.cpp  lsx.cpp  numberparsing.h  parsedjson.cpp  parsedjsoniterator.cpp  parsedjsonwriter.h  ppc64.cpp  rvv-vls.cpp  rvv.cpp  simd_input.h  simd_input_arm64.h  simd_input_haswell.h  simd_input_westmere.h  simdjerr.cpp  simdjson.cpp  simdjson_impl.cpp  simdprune_tables.h  simdutf8check.h  simdutf8check_arm64.h  simdutf8check_haswell.h  (+18 more)
tests/: CMakeLists.txt  add_cpp_test.cmake  allocator_tests.cpp  allparserscheckfile.cpp  arithmetic_overflow_tests.cpp  basictests.cpp  cast_tester.h  checkimplementation.cpp  document_stream_fuzz_test_common.h  document_stream_tests.cpp  document_tests.cpp  dtoa.c  errortests.cpp  extracting_values_example.cpp  fastnumberpathtests.cpp  fractured_json_tests.cpp  integer_tests.cpp  jsoncheck.cpp  jsonstream_test.cpp  memory_map_tests.cpp  minefieldcheck.cpp  minify_tests.cpp  number_comparison.h  number_comparison_tests.cpp  numberparsingcheck.cpp  padded_string_tests.cpp  pointercheck.cpp  (+13 more)
(+2954 files in other folders)
